@@ -1,3 +1,8 @@
+2020-02-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-shell-command):
+	Handle `shell-command-save-pos-or-erase'.  (Bug#39067)
+
 2020-01-28  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.4.3.1 released.
